examples/deployment/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: sandbox
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
  - protocol: TCP
    port: 80        # service port
    targetPort: 80  # container port
  selector:
    app: nginx

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-web
  namespace: sandbox
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: nginx-ui.local
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
